feat(integration): sediakan daftar entitas legal untuk finance
